moved user uuid to profile page

--- a/public/pages/community.html
+++ b/public/pages/community.html
@@ -34,7 +34,7 @@
                     <div class="header">Forum</div>
                 </div>
                 <div class="box-content">
-                    <div class="well">Connect, share and discuss Octoblu with the community.</div>
+                    <div class="well">Connect, share and discuss Octoblu with the community. <br /><br /></div>
                     <a href="http://forum.octoblu.com/" title="Octoblu Forum" class="btn btn-primary"><i class='icon-group'></i>  Go to Forum</a>
                 </div>
             </div>
