--- a/public/pages/dashboard.html
+++ b/public/pages/dashboard.html
@@ -19,16 +19,10 @@
                         <i class="icon-dashboard"></i>
                         <span>Dashboard - {{user}}</span>
                     </h1>
-                </div>
-                <div class="row">
-                    <div class="col-sm-12">
-                        <!--<div class="pull-right" style="margin-top: -5px;">-->
-                            <!--<button class="btn btn-sm btn-default">Upgrade Plan</button>-->
-                        <!--</div>-->
-                        <div style="margin-bottom: 30px;">
-                            <strong>Your UUID is:</strong> {{skynetuuid}}
-                        </div>
-                    </div>
+                    <h1 class="pull-right" style="margin-top: 20px;">
+                        <button class="btn btn-lg btn-default">Upgrade Plan</button>
+                    </h1>
+
                 </div>
                 <div class="row">
                     <div class="col-sm-4 dashboard-panel">
@@ -148,4 +142,3 @@
         </div>
     </div>
 </section>
-
