--- a/public/pages/profile.html
+++ b/public/pages/profile.html
@@ -2,14 +2,22 @@
   <div class='container'>
     <div class='row' id='content-wrapper'>
       <div class='col-xs-12'>
-        
+
         <div class='page-header page-header-with-buttons'>
           <h1 class='pull-left'>
             <i class='icon-user'></i>
-            <span>Profile - {{user}}</span>              
-          </h1>        
+            <span>Profile - {{user}}</span>
+          </h1>
         </div>
-      
+        <div class="row">
+            <div class="col-sm-12">
+                <h2 style="margin-bottom: 30px;">
+                    <strong>Your UUID is:</strong> {{skynetuuid}}
+                </h2>
+            </div>
+        </div>
+
+
       </div>
     </div>
   </div>
