added pointer cursor to subdevices on devices tab

--- a/public/pages/connector/devices/index.html
+++ b/public/pages/connector/devices/index.html
@@ -112,10 +112,11 @@
             <li ng-repeat="smartDevice in smartDevices | orderBy:'name'">
                 <div class="channel_icon-grid-view mod-index-0 pop-over"
                      data-original-title="{{smartDevice.name}} - {{smartDevice.description}}" data-placement="auto"
-                     ng-class="{'unavailable':!smartDevice.enabled}">
+                     ng-class="{'unavailable':!smartDevice.enabled}" style="cursor:pointer;">
                     <a ng-disabled="{{! smartDevice.enabled}}" ng-click="addSmartDevice(smartDevice)"><img
-                            ng-src="{{smartDevice.logo || defaultLogo }}" width="70" height="70"/></a>
-                </div>
+                        ng-src="{{smartDevice.logo || defaultLogo }}" width="70" height="70"/></a>
+
+              </div>
             </li>
         </ul>
     </div>
