--- a/public/index.html
+++ b/public/index.html
@@ -220,6 +220,7 @@
     <script src="assets/javascripts/skroller.js"></script>
     <script src="assets/javascripts/elastic.min.js"></script>
     <script src="assets/javascripts/elasticsearch.angular.js"></script>
+    <script src="assets/javascripts/angular-dragdrop.min.js"></script>
     <!-- endbuild -->
 
     <!-- build:js({.tmp,app}) scripts/scripts.js -->
