--- a/public/pages/connector/devices/index.html
+++ b/public/pages/connector/devices/index.html
@@ -127,7 +127,7 @@
                      data-original-title="{{smartDevice.name}} - {{smartDevice.description}}" data-placement="auto"
                      ng-class="{'unavailable':!smartDevice.enabled}">
                     <a ng-disabled="{{! smartDevice.enabled}}" ng-click="addSmartDevice(smartDevice)"><img
-                        ng-src="{{smartDevice.logo || defaultLogo }}" width="70" height="70" data-drag="{{smartDevice.drag}}" data-jqyoui-options="{revert: 'invalid'}" ng-model="smartDevice" jqyoui-draggable="{index: {{$index}},placeholder:'keep',animate:true, onStart:'startCallback(smartDevice, $index)', onStop: 'stopCallback', onDrag: 'dragCallback'}" style="z-index:9999;"/></a>
+                        ng-src="{{smartDevice.logo || defaultLogo }}" width="70" height="70" data-drag="{{smartDevice.drag}}" data-jqyoui-options="{revert: 'invalid'}" ng-model="smartDevice" jqyoui-draggable="{index: {{$index}},placeholder:'keep',animate:true, onStart:'startCallback(smartDevice, $index)', onStop: 'stopCallback', onDrag: 'dragCallback'}"/></a>
 
               </div>
             </li>
