--- a/public/pages/connector/devices/index.html
+++ b/public/pages/connector/devices/index.html
@@ -19,9 +19,9 @@
         margin-left: 2%;
     }
    .subdevice-panel {
-       /*border: 1px solid #dddddd;*/
-       /*border-radius: 3em / 3em;*/
-       padding: 10% 20px 10% 20px;
+       border: 1px solid #dddddd;
+       border-radius: 3em / 3em;
+       padding: 2% 20px 2% 20px;
        /*margin-left: 2%;*/
 
    }
@@ -30,10 +30,17 @@
        margin-bottom: 15px !important;
    }
     .device-carousel-item {
-        min-height: 142px !important;
-        min-width: 142px !important;
-        padding: 5px 5px 5px 5px;
+
+        margin-top: 30px;
+        margin-bottom: 30px;
+        width: 120px;
     }
+    .owl-item {
+
+        padding: 5px 5px 5px 5px;
+        width: 120px;
+    }
+
     .channel_icon-grid-view {
       cursor:pointer;
     }
@@ -61,7 +68,7 @@
 </div>
 
 <div class="row device-panel" ng-repeat="g in claimedGateways | orderBy: 'name'">
-    <div id="{{g.uuid}}" class="col-sm-3">
+    <div id="{{g.uuid}}" class="col-sm-2">
         <img class="img-thumbnail col-sm-12" src="/assets/images/network_hub.png" alt="{{g.name}}" height="64px" width="64px" data-drop="true" jqyoui-droppable="{index: {{$index}}, onDrop:'dropCallback',onOver: 'overCallback', onOut: 'outCallback'}">
 
 <!-- <div class="btn btn-droppable" data-drop="true" ng-model='list1' jqyoui-droppable="{index: {{$index}}, onDrop:'dropCallback',onOver: 'overCallback', onOut: 'outCallback'}"> -->
@@ -105,7 +112,7 @@
             </div>
         </div>
     </div>
-    <div class="col-sm-7">
+    <div class="col-sm-10">
       <device-carousel hub="g"></device-carousel>
 
     </div>
