--- a/public/pages/connector/devices/index.html
+++ b/public/pages/connector/devices/index.html
@@ -11,7 +11,19 @@
         height: 16px !important;
         width: 16px !important;
     }
+    .hub-details{
+        margin-bottom: 0px;
+        font-size: 0.75em;
+    }
 
+    .hub-details > li {
+        padding-left : 0px;
+        padding-right: 0px;
+        overflow: hidden;
+        text-overflow: ellipsis;
+        white-space: nowrap;
+
+    }
     .hub-panel {
         border: 1px solid #dddddd;
         border-radius: 3em / 3em;
@@ -77,30 +89,28 @@
 
     </div>
         <div collapse="!g.showDetails" class="col-sm-12 " style="padding-left: 0; padding-right: 0;">
-            <!--<table class="table table-condensed table-bordered">-->
-                <!--<tr>-->
-                    <!--<td class="table-heading"><strong>UUID</strong></td>-->
-                    <!--<td><span class="label label-primary">{{g.uuid}}</span></td>-->
-                <!--</tr>-->
-                <!--<tr>-->
-                    <!--<td><strong>Token</strong></td>-->
-                    <!--<td>-->
-                        <!--<a ng-click="moreInfo = true" ng-hide="moreInfo" href="">********************************</a>-->
-                        <!--<input type="text" ng-show="moreInfo" value="{{g.token}}" size="40">-->
-                    <!--</td>-->
-                <!--</tr>-->
-                <!--<tr>-->
-                    <!--<td><strong>Online</strong></td>-->
-                    <!--<td><span class="label" ng-class="{'label-success' : g.online, 'label-danger': !g.online}">{{g.online}}</span>-->
-                    <!--</td>-->
-                <!--</tr>-->
-            <!--</table>-->
+            <ul class="list-group hub-details" style="margin-bottom: 0px;">
+                <li class="list-group-item list-group-item-default" tooltip="UUID" tooltip-placement="right"
+                    tooltip-popup-delay="5" >
+                  <span class="label label-default">{{g.uuid}}</span>
+                </li>
+                <li class="list-group-item" tooltip="Token" tooltip-placement="right"
+                    tooltip-popup-delay="5">
+                    <span class="label label-default">{{g.token}}</span>
+                </li>
+                <li class="list-group-item list-group-item-default" tooltip="Online" tooltip-placement="right"
+                    tooltip-popup-delay="5">
+                    <span class="label" ng-class="{'label-success' : g.online, 'label-danger': !g.online}">{{g.online}}</span>
+                </li>
+            </ul>
+
         </div>
 
         <div class="btn-group btn-group-justified">
             <div class="btn-group">
                 <button tooltip="View Hub Details" tooltip-placement="bottom"
-                        tooltip-popup-delay="5" type="button" class="btn btn-default" ng-model="g.showDetails" >
+                        tooltip-popup-delay="5" type="button" class="btn btn-default" ng-model="g.showDetails" btn-checkbox
+                        btn-checkbox-true="true" btn-checkbox-false="false">
                     <i class="fa" style="padding-right: 5px;" ng-class="{'fa-info-circle' : g.showDetails, 'fa-info' : !g.showDetails}"></i>Info
                 </button>
             </div>
