Added skeleton views for main admin page,  all groups, group detail and invitation modal.
Also added mockup design file (admin-page.ep in design folder). This file can be opened with Evolus Pencil [http://pencil.evolus.vn] - A GUI mockup application

--- a/public/index.html
+++ b/public/index.html
@@ -137,8 +137,8 @@
                             <span>Community</span>
                         </a>
                     </li>
-                    <li id="nav-admin">
-                        <a href="" ui-sref="admin">
+                    <li id="nav-admin" ng-class="{'active': $state.includes('admin')}">
+                        <a href="" ui-sref="admin.groups"  >
                             <i class="icon-lock"></i>
                             <span>Admin</span>
                         </a>
