--- a/public/pages/admin/index.html
+++ b/public/pages/admin/index.html
@@ -49,7 +49,7 @@
                         </a>
                     </div>
                     <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
-                        <button type="button" class="btn btn-success btn-lg center-block">
+                        <button type="button" class="btn btn-success btn-lg center-block" ng-click="sendInvitation()">
                             <i class="fa fa-users" style="margin-right: 10px"></i>Invite
                         </button>
                     </div>
