--- a/public/pages/admin/index.html
+++ b/public/pages/admin/index.html
@@ -1,22 +1,28 @@
 <style>
     .round-button {
-        display:block;
-        width:100px;
-        height:100px;
-        line-height:100px;
+        display: block;
+        width: 100px;
+        height: 100px;
+        line-height: 100px;
         border: 2px solid #0162AC;
         border-radius: 50%;
         color: #f5f5f5;
-        text-align:center;
-        text-decoration:none;
+        text-align: center;
+        text-decoration: none;
         background: #0162AC;
         box-shadow: 0 0 3px #3690D6;
-        font-size:20px;
-        font-weight:bold;
+        font-size: 20px;
+        font-weight: bold;
     }
+
     .round-button:hover {
         background: #3690D6;
         color: #f5f5f5;
+    }
+
+    .admin-group {
+
+
     }
 </style>
 
@@ -25,33 +31,35 @@
         <div class='row' id='content-wrapper'>
             <div class='col-xs-12'>
                 <div class='page-header'>
-                    <h1>
+                    <h1 class="col-xs-12 col-sm-12 col-md-11 col-lg-11" style="margin-top: 25px;">
                         <i class='fa fa-lock'></i>
                         <span>Admin</span>
+                        <button type="button" class="btn btn-success btn-lg pull-right" ng-click="sendInvitation()" style="margin-top: 0px;">
+                            <i class="fa fa-users" style="margin-right: 10px"></i>Invite
+                        </button>
                     </h1>
-                </div>
-                <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12" ui-view="">
 
                 </div>
+
+                <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12" ui-view=""></div>
                 <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
-                   <div class="col-xs-12 col-sm-2 col-md-2 col-lg-2">
-                       <a class="round-button">
-                         All<i class="fa fa-th-large" style="margin-left: 5px;"></i>
-                       </a>
-                   </div>
-                   <div class="col-xs-12 col-sm-8 col-md-8 col-lg-8">
 
-
-                   </div>
-                    <div class="col-xs-12 col-sm-2 col-md-2 col-lg-2">
+                    <div class="col-xs-12 col-sm-12 col-md-2 col-lg-2">
                         <a class="round-button">
-                          Add<i class="fa fa-plus" style="margin-left: 5px;"></i>
+                            All<i class="fa fa-th-large" style="margin-left: 5px;"></i>
+                        </a>
+                    </div>
+                    <div class="col-xs-12 col-sm-12 col-md-8 col-lg-8">
+
+
+                    </div>
+                    <div class="col-xs-12 col-sm-12 col-md-2 col-lg-2">
+                        <a class="round-button">
+                            Add<i class="fa fa-plus" style="margin-left: 5px;"></i>
                         </a>
                     </div>
                     <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
-                        <button type="button" class="btn btn-success btn-lg center-block" ng-click="sendInvitation()">
-                            <i class="fa fa-users" style="margin-right: 10px"></i>Invite
-                        </button>
+
                     </div>
                 </div>
 
