--- a/public/index.html
+++ b/public/index.html
@@ -225,6 +225,7 @@
 
     <!-- build:js({.tmp,app}) scripts/scripts.js -->
     <script src="angular/app.js"></script>
+    <script src="angular/services/mock.js"></script>
     <script src="angular/services/user.js"></script>
     <script src="angular/services/owner.js"></script>
     <script src="angular/services/gateway.js"></script>
