--- a/public/pages/admin/index.html
+++ b/public/pages/admin/index.html
@@ -27,9 +27,9 @@
 </style>
 
 <section id="content">
-    <div class='container'>
-        <div class='row' id='content-wrapper'>
-            <div class='col-xs-12'>
+    <div class="container">
+        <div class="row" id="content-wrapper">
+            <div class="col-xs-12">
                 <div class='page-header'>
                     <h1 class="col-xs-12 col-sm-12 col-md-11 col-lg-11" style="margin-top: 25px;">
                         <i class='fa fa-lock'></i>
@@ -54,6 +54,13 @@
                         </a>
                     </div>
                     <div class="col-xs-12 col-sm-12 col-md-8 col-lg-8">
+                        <p ng-repeat="group in groups">
+                            <strong>{{group.name}}</strong>
+                            <br>
+                            Members: {{group.members.length}}
+                            <br>
+                            Devices: {{group.devices.length}}
+                        </p>
                     </div>
                     <div class="col-xs-12 col-sm-12 col-md-2 col-lg-2">
                         <a class="round-button">
