Added styles to add scrolling to people and devices panels on admin page.

--- a/public/pages/admin/index.html
+++ b/public/pages/admin/index.html
@@ -20,6 +20,21 @@
         color: #f5f5f5;
     }
 
+    .group-info-panel{
+        padding-left: 0px;
+        padding-right: 0px;
+    }
+
+    .group-info-panel-body{
+        max-height: 280px !important;
+        overflow-y: scroll;
+    }
+
+    .group-summary-panel {
+
+
+    }
+
     .admin-group {
 
 
