--- a/public/pages/admin/index.html
+++ b/public/pages/admin/index.html
@@ -30,11 +30,28 @@
         overflow-y: scroll;
     }
 
-    .group-summary-panel {
-
-
+    .group-summary {
+        border: 1px solid #D6D6D6;
+        border-radius: 3em / 3em;
+        padding: 2% 20px 2% 20px;
+       padding: 50px 2% 50px 2%;
     }
 
+
+    .group-summary-panel {
+        padding-left: 0px;
+        padding-right: 0px;
+        margin-right: 15px;
+    }
+
+    .group-summary-panel-body {
+    }
+
+    .group-summary-panel-body ul{
+       list-style: none;
+        margin-bottom: 0px;
+        padding-left: 0px;
+    }
     .admin-group {
 
 
@@ -62,22 +79,30 @@
                     </h1>
                 </div>
                 <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12" ui-view=""></div>
-                <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
-                    <div class="col-xs-12 col-sm-12 col-md-2 col-lg-2">
+                <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12" style="margin: 25px 10% 0px 5%;">
+                    <div class="col-xs-12 col-sm-12 col-md-2 col-lg-1" style="margin-top: 40px;">
                         <a class="round-button">
                             All<i class="fa fa-th-large" style="margin-left: 5px;"></i>
                         </a>
                     </div>
-                    <div class="col-xs-12 col-sm-12 col-md-8 col-lg-8">
-                        <p ng-repeat="group in groups">
-                            <strong>{{group.name}}</strong>
-                            <br>
-                            Members: {{group.members.length}}
-                            <br>
-                            Devices: {{group.devices.length}}
-                        </p>
+                    <div class="col-xs-12 col-sm-12 col-md-8 col-lg-8 group-summary">
+                        <div data-ng-repeat="group in groups" class="panel panel-default col-xs-12 col-sm-12 col-md-2 col-lg-2 group-summary-panel">
+                            <div class="panel-heading">
+                              <h5 class="text-center"><i class="fa fa-group" style="margin-right: 5px;"></i>{{group.name}}</h5>
+                            </div>
+                            <div class="panel-body group-summary-panel-body">
+                               <ul>
+                                   <li>
+                                     <i class="fa fa-user" style="margin-right: 10px;"></i>People <span class="label label-info pull-right">{{group.members.length}}</span>
+                                   </li>
+                                   <li>
+                                       <i class="fa fa-hdd-o" style="margin-right: 20px;"></i>Devices<span class="label label-success pull-right">{{group.devices.length}}</span>
+                                   </li>
+                               </ul>
+                            </div>
+                        </div>
                     </div>
-                    <div class="col-xs-12 col-sm-12 col-md-2 col-lg-2">
+                    <div class="col-xs-12 col-sm-12 col-md-2 col-lg-1" style="margin-top: 40px;">
                         <a class="round-button">
                             Add<i class="fa fa-plus" style="margin-left: 5px;"></i>
                         </a>
