--- a/public/pages/admin/index.html
+++ b/public/pages/admin/index.html
@@ -34,7 +34,8 @@
         border: 1px solid #D6D6D6;
         border-radius: 3em / 3em;
         padding: 2% 20px 2% 20px;
-       padding: 50px 2% 50px 2%;
+       padding: 20px 2% 20px 2%;
+       padding: 20px 2% 20px 2%;
     }
 
 
@@ -80,12 +81,14 @@
                 </div>
                 <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12" ui-view=""></div>
                 <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12" style="margin: 25px 10% 0px 5%;">
+
                     <div class="col-xs-12 col-sm-12 col-md-2 col-lg-1" style="margin-top: 40px;">
                         <a class="round-button">
                             All<i class="fa fa-th-large" style="margin-left: 5px;"></i>
                         </a>
                     </div>
                     <div class="col-xs-12 col-sm-12 col-md-8 col-lg-8 group-summary">
+                        <h3 class="text-center text-muted col-xs-12 col-sm-12 col-md-12 col-lg-12">Groups</h3>
                         <div data-ng-repeat="group in groups" class="panel panel-default col-xs-12 col-sm-12 col-md-2 col-lg-2 group-summary-panel">
                             <div class="panel-heading">
                               <h5 class="text-center"><i class="fa fa-group" style="margin-right: 5px;"></i>{{group.name}}</h5>
@@ -96,7 +99,7 @@
                                      <i class="fa fa-user" style="margin-right: 10px;"></i>People <span class="label label-info pull-right">{{group.members.length}}</span>
                                    </li>
                                    <li>
-                                       <i class="fa fa-hdd-o" style="margin-right: 20px;"></i>Devices<span class="label label-success pull-right">{{group.devices.length}}</span>
+                                       <i class="fa fa-hdd-o" style="margin-right: 10px;"></i>Devices<span class="label label-success pull-right">{{group.devices.length}}</span>
                                    </li>
                                </ul>
                             </div>
