Adding skeleton and routes for Invitation API.

--- a/public/pages/admin/index.html
+++ b/public/pages/admin/index.html
@@ -89,7 +89,7 @@
                     </div>
                     <div class="col-xs-12 col-sm-12 col-md-8 col-lg-8 group-summary">
                         <h3 class="text-center text-muted col-xs-12 col-sm-12 col-md-12 col-lg-12">Groups</h3>
-                        <div data-ng-repeat="group in groups" class="panel panel-default col-xs-12 col-sm-12 col-md-2 col-lg-2 group-summary-panel">
+                        <div data-ng-repeat="group in groups" class="panel panel-primary col-xs-12 col-sm-12 col-md-2 col-lg-2 group-summary-panel">
                             <div class="panel-heading">
                               <h5 class="text-center"><i class="fa fa-group" style="margin-right: 5px;"></i>{{group.name}}</h5>
                             </div>
