--- a/public/pages/admin/index.html
+++ b/public/pages/admin/index.html
@@ -20,12 +20,12 @@
         color: #f5f5f5;
     }
 
-    .group-info-panel{
+    .group-info-panel {
         padding-left: 0px;
         padding-right: 0px;
     }
 
-    .group-info-panel-body{
+    .group-info-panel-body {
         max-height: 280px !important;
         overflow-y: scroll;
     }
@@ -34,10 +34,9 @@
         border: 1px solid #D6D6D6;
         border-radius: 3em / 3em;
         padding: 2% 20px 2% 20px;
-       padding: 20px 2% 20px 2%;
-       padding: 20px 2% 20px 2%;
+        padding: 20px 2% 20px 2%;
+        padding: 20px 2% 20px 2%;
     }
-
 
     .group-summary-panel {
         padding-left: 0px;
@@ -48,13 +47,13 @@
     .group-summary-panel-body {
     }
 
-    .group-summary-panel-body ul{
-       list-style: none;
+    .group-summary-panel-body ul {
+        list-style: none;
         margin-bottom: 0px;
         padding-left: 0px;
     }
-    .admin-group {
 
+    .admin-group {
 
     }
 </style>
@@ -67,12 +66,16 @@
                     <h1 class="col-xs-12 col-sm-12 col-md-11 col-lg-11" style="margin-top: 25px;">
                         <i class='fa fa-lock'></i>
                         <span>Admin</span>
-                        <form class="form-inline pull-right" role="form" ng-controller="invitationController" style="margin-top: 0px;">
+
+                        <form class="form-inline pull-right" role="form" ng-controller="invitationController"
+                              style="margin-top: 0px;">
                             <div class="form-group">
                                 <label class="sr-only" for="recipientEmail">Email address</label>
-                                <input type="email" class="form-control" id="recipientEmail" ng-model="recipientEmail" placeholder="Enter email">
+                                <input type="email" class="form-control" id="recipientEmail" ng-model="recipientEmail"
+                                       placeholder="Enter email">
                             </div>
-                            <button type="button" class="btn btn-success btn-lg" ng-click="send()" style="margin-top: 0px;">
+                            <button type="button" class="btn btn-success btn-lg" ng-click="send()"
+                                    style="margin-top: 0px;">
                                 <i class="fa fa-users" style="margin-right: 10px"></i>Invite
                             </button>
                         </form>
@@ -80,35 +83,41 @@
                     </h1>
                 </div>
                 <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12" ui-view=""></div>
-                <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12" style="margin: 25px 10% 0px 5%;">
 
-                    <div class="col-xs-12 col-sm-12 col-md-2 col-lg-1" style="margin-top: 40px;">
-                        <a class="round-button">
-                            All<i class="fa fa-th-large" style="margin-left: 5px;"></i>
-                        </a>
+                <div class="col-xs-12 col-sm-12 col-md-11 col-lg-11 group-summary">
+
+                    <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
+                        <a class="pull-left btn btn-default" ui-sref="admin.groups"><i
+                                class="fa fa-th-large"></i>All</a>
+
+                        <form class="form-inline pull-right" role="form">
+                            <div class="form-group">
+                                <label class="sr-only" for="add-group-name">Email address</label>
+                                <input type="text" required="required" class="form-control" id="add-group-name"
+                                       placeholder="Enter a Group Name">
+                            </div>
+                            <button type="submit" class="btn btn-default"><i class="fa fa-plus"></i>Add Group</button>
+                        </form>
                     </div>
-                    <div class="col-xs-12 col-sm-12 col-md-8 col-lg-8 group-summary">
-                        <h3 class="text-center text-muted col-xs-12 col-sm-12 col-md-12 col-lg-12">Groups</h3>
-                        <div data-ng-repeat="group in groups" class="panel panel-primary col-xs-12 col-sm-12 col-md-2 col-lg-2 group-summary-panel">
-                            <div class="panel-heading">
-                              <h5 class="text-center"><i class="fa fa-group" style="margin-right: 5px;"></i>{{group.name}}</h5>
-                            </div>
-                            <div class="panel-body group-summary-panel-body">
-                               <ul>
-                                   <li>
-                                     <i class="fa fa-user" style="margin-right: 10px;"></i>People <span class="label label-info pull-right">{{group.members.length}}</span>
-                                   </li>
-                                   <li>
-                                       <i class="fa fa-hdd-o" style="margin-right: 10px;"></i>Devices<span class="label label-success pull-right">{{group.devices.length}}</span>
-                                   </li>
-                               </ul>
-                            </div>
+                    <h3 class="text-center text-muted col-xs-12 col-sm-12 col-md-12 col-lg-12">Groups</h3>
+                    <div data-ng-repeat="group in groups"
+                         class="panel panel-primary col-xs-12 col-sm-12 col-md-2 col-lg-2 group-summary-panel">
+                        <div class="panel-heading">
+                            <h5 class="text-center"><i class="fa fa-group" style="margin-right: 5px;"></i>{{group.name}}
+                            </h5>
                         </div>
-                    </div>
-                    <div class="col-xs-12 col-sm-12 col-md-2 col-lg-1" style="margin-top: 40px;">
-                        <a class="round-button">
-                            Add<i class="fa fa-plus" style="margin-left: 5px;"></i>
-                        </a>
+                        <div class="panel-body group-summary-panel-body">
+                            <ul>
+                                <li>
+                                    <i class="fa fa-user" style="margin-right: 10px;"></i>People <span
+                                        class="label label-info pull-right">{{group.members.length}}</span>
+                                </li>
+                                <li>
+                                    <i class="fa fa-hdd-o" style="margin-right: 10px;"></i>Devices<span
+                                        class="label label-success pull-right">{{group.devices.length}}</span>
+                                </li>
+                            </ul>
+                        </div>
                     </div>
                 </div>
             </div>
