Added group service, changed angular app name fro 'e2eApp' to 'octobluApp'

--- a/public/index.html
+++ b/public/index.html
@@ -59,7 +59,7 @@
         }
     </style>
 </head>
-<body class="contrast-sea-blue" ng-app="e2eApp">
+<body class="contrast-sea-blue" ng-app="octobluApp">
     <header>
         <nav class="navbar navbar-default navbar-fixed-top">
             <a class="navbar-brand" href="" ui-sref="home">
