GroupService API documentation

--- a/public/index.html
+++ b/public/index.html
@@ -225,13 +225,13 @@
 
     <!-- build:js({.tmp,app}) scripts/scripts.js -->
     <script src="angular/app.js"></script>
-    <script src="angular/services/mock.js"></script>
     <script src="angular/services/user.js"></script>
     <script src="angular/services/owner.js"></script>
     <script src="angular/services/gateway.js"></script>
     <script src="angular/services/device.js"></script>
     <script src="angular/services/channel.js"></script>
     <script src="angular/services/nodered.js"></script>
+    <script src="angular/services/group.js"></script>
     <script src="angular/services/message.js"></script>
     <script src="angular/services/elastic.js"></script>
     <script src="angular/services/plugin.js"></script>
