--- a/public/pages/admin/index.html
+++ b/public/pages/admin/index.html
@@ -1,25 +1,4 @@
 <style>
-    .round-button {
-        display: block;
-        width: 100px;
-        height: 100px;
-        line-height: 100px;
-        border: 2px solid #0162AC;
-        border-radius: 50%;
-        color: #f5f5f5;
-        text-align: center;
-        text-decoration: none;
-        background: #0162AC;
-        box-shadow: 0 0 3px #3690D6;
-        font-size: 20px;
-        font-weight: bold;
-    }
-
-    .round-button:hover {
-        background: #3690D6;
-        color: #f5f5f5;
-    }
-
     .group-info-panel {
         padding-left: 0px;
         padding-right: 0px;
@@ -93,10 +72,10 @@
                         <form class="form-inline pull-right" role="form">
                             <div class="form-group">
                                 <label class="sr-only" for="add-group-name">Email address</label>
-                                <input type="text" required="required" class="form-control" id="add-group-name"
+                                <input type="text" required="required" ng-model="newGroupName" class="form-control" id="add-group-name"
                                        placeholder="Enter a Group Name">
                             </div>
-                            <button type="submit" class="btn btn-default"><i class="fa fa-plus"></i>Add Group</button>
+                            <button type="button" ng-submit="addGroup()" class="btn btn-default"><i class="fa fa-plus"></i>Add Group</button>
                         </form>
                     </div>
                     <h3 class="text-center text-muted col-xs-12 col-sm-12 col-md-12 col-lg-12">Groups</h3>
