Adding group and invitation services for angularjs

--- a/public/pages/admin/index.html
+++ b/public/pages/admin/index.html
@@ -50,7 +50,7 @@
                               style="margin-top: 0px;">
                             <div class="form-group">
                                 <label class="sr-only" for="recipientEmail">Email address</label>
-                                <input type="email" class="form-control" id="recipientEmail" ng-model="recipientEmail"
+                                <input type="email" class="form-control" id="recipientEmail" ng-model="e0d24088-c56c-44c8-935d-28eee67de701"
                                        placeholder="Enter email">
                             </div>
                             <button type="button" class="btn btn-success btn-lg" ng-click="send()"
