--- a/public/index.html
+++ b/public/index.html
@@ -235,6 +235,7 @@
     <script src="angular/services/message.js"></script>
     <script src="angular/services/elastic.js"></script>
     <script src="angular/services/plugin.js"></script>
+    <script src="angular/services/invitation.js"></script>
     <script src="angular/directives/nvd3-line-chart.js"></script>
     <script src="angular/directives/nvd3-pie-chart.js"></script>
     <script src="angular/directives/popover.js"></script>
@@ -262,36 +263,5 @@
     <script src="angular/controllers/services.js"></script>
     <script src="angular/controllers/signup.js"></script>
     <!-- endbuild -->
-
-    <!--
-      <script>
-        var socket;
-        if($.cookie('skynetuuid') && $.cookie('skynettoken')){
-          // connect to skynet
-          var skynetConfig = {
-            "uuid": $.cookie('skynetuuid'),
-            "token": $.cookie('skynettoken')
-          }
-          skynet(skynetConfig, function (e, skysocket) {
-            if (e) throw e;
-            socket = skysocket;
-          });
-
-        }
-      </script>
-    -->
-
-    <!--<script type="text/javascript">-->
-        <!--/* * * CONFIGURATION VARIABLES: EDIT BEFORE PASTING INTO YOUR WEBPAGE * * */-->
-        <!--var disqus_shortname = 'octoblu'; // required: replace example with your forum shortname-->
-
-        <!--/* * * DON'T EDIT BELOW THIS LINE * * */-->
-        <!--(function () {-->
-            <!--var s = document.createElement('script'); s.async = true;-->
-            <!--s.type = 'text/javascript';-->
-            <!--s.src = '//' + disqus_shortname + '.disqus.com/count.js';-->
-            <!--(document.getElementsByTagName('HEAD')[0] || document.getElementsByTagName('BODY')[0]).appendChild(s);-->
-        <!--}());-->
-    <!--</script>-->
 </body>
 </html>
