--- a/public/pages/admin/index.html
+++ b/public/pages/admin/index.html
@@ -45,7 +45,19 @@
                     <h1 class="col-xs-12 col-sm-12 col-md-11 col-lg-11" style="margin-top: 25px;">
                         <i class='fa fa-lock'></i>
                         <span>Admin</span>
-
+                        <div class="dropdown">
+                            <button class="btn dropdown-toggle sr-only" type="button" id="invitationDropDownBtn" data-toggle="dropdown">
+                                Dropdown
+                                <span class="caret"></span>
+                            </button>
+                            <ul class="dropdown-menu" role="menu" aria-labelledby="invitationDropDown">
+                                <li role="presentation"><a role="menuitem" tabindex="-1" href="#">Action</a></li>
+                                <li role="presentation"><a role="menuitem" tabindex="-1" href="#">Another action</a></li>
+                                <li role="presentation"><a role="menuitem" tabindex="-1" href="#">Something else here</a></li>
+                                <li role="presentation" class="divider"></li>
+                                <li role="presentation"><a role="menuitem" tabindex="-1" href="#">Separated link</a></li>
+                            </ul>
+                        </div>
                         <form class="form-inline pull-right" role="form" ng-controller="invitationController"
                               style="margin-top: 0px;">
                             <div class="form-group">
