Added styling for all groups and group detail page. Changed states and associated routes because the detail view was not being displayed.

--- a/public/index.html
+++ b/public/index.html
@@ -138,7 +138,7 @@
                         </a>
                     </li>
                     <li id="nav-admin" ng-class="{'active': $state.includes('admin')}">
-                        <a href="" ui-sref="admin.groups"  >
+                        <a href="" ui-sref="admin.all"  >
                             <i class="icon-lock"></i>
                             <span>Admin</span>
                         </a>
