--- a/public/pages/admin/groups/all.html
+++ b/public/pages/admin/groups/all.html
@@ -1,9 +1,9 @@
 <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
-    <div class="panel panel-primary  col-xs-12 col-sm-12 col-md-5 col-lg-5 group-info-panel">
-        <div class="panel-heading">
-            <h4 class="panel-title text-center">
-                <i class="fa fa-user" style="margin-right: 5px;"></i>People
-            </h4>
+    <div class="panel  col-xs-12 col-sm-5 col-md-5 col-lg-5 group-info-panel purple-border people-panel">
+        <div class="panel-heading purple-background">
+            <h3 class="title text-center">
+                <i class="fa fa-user fa-lg" style="margin-right: 5px;"></i>People
+            </h3>
         </div>
         <div class="panel-body group-info-panel-body">
             <ul class="list-group">
@@ -14,11 +14,11 @@
             </ul>
         </div>
     </div>
-    <div class="panel panel-primary group-info-panel col-xs-12 col-sm-12 col-md-5 col-lg-5 col-md-offset-1 col-lg-offset-1" style="padding-left: 0px; padding-right: 0px;">
-        <div class="panel-heading">
-            <h4 class="panel-title text-center">
-               <i class="fa fa-hdd-o"></i> Devices
-            </h4>
+    <div class="panel  group-info-panel col-xs-12 col-sm-5 col-md-5 col-lg-5 col-md-offset-1 col-lg-offset-1 grass-green-border device-panel">
+        <div class="panel-heading grass-green-background">
+            <h3 class="title text-center">
+               <i class="fa fa-hdd-o fa-lg"></i> Devices
+            </h3>
         </div>
         <div class="panel-body group-info-panel-body">
             <ul class="list-group">
