--- a/public/pages/admin/index.html
+++ b/public/pages/admin/index.html
@@ -3,9 +3,30 @@
         padding-left: 0px;
         padding-right: 0px;
     }
+ 
+    @media(min-width: 992px){
+        .permissions-panel {
+           margin : 75px 55px 0 55px;
+
+        }
+    }
+
+    .permissions-panel .panel-body {
+        padding: 0;
+    }
+
+    .permissions-panel .panel-body li {
+        border-style: none;
+    }
+
+
+    .people-panel .panel-heading .title, .device-panel .panel-heading .title {
+        color: #ffffff !important;
+    }
 
     .group-info-panel-body {
         max-height: 280px !important;
+        min-height: 280px !important;
         overflow-y: scroll;
     }
 
@@ -23,6 +44,14 @@
         margin-right: 15px;
     }
 
+    .group-summary-panel-heading  a.bg-primary:hover,
+    {
+        cursor: hand !important;
+        text-decoration: underline !important;
+        background-color: #428bca !important;
+        color: #ffffff !important;
+    }
+
     .group-summary-panel-body {
     }
 
@@ -31,6 +60,7 @@
         margin-bottom: 0px;
         padding-left: 0px;
     }
+
 
     .admin-group {
 
@@ -52,7 +82,7 @@
                                 <input type="email" class="form-control" id="recipientEmail" ng-model="recipientEmail"
                                        placeholder="Enter email">
                             </div>
-                            <button type="button" class="btn btn-success btn-lg" ng-disabled="form.$invalid" ng-click="send()"
+                            <button type="button" class="btn btn-default btn-lg" ng-disabled="form.$invalid" ng-click="send()"
                                     style="margin-top: 0px;">
                                 <i class="fa fa-users" style="margin-right: 10px"></i>Invite
                             </button>
@@ -65,7 +95,7 @@
                 <div class="col-xs-12 col-sm-12 col-md-11 col-lg-11 group-summary">
 
                     <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
-                        <a class="pull-left btn btn-default" ui-sref="admin.groups"><i
+                        <a class="pull-left btn btn-default" ui-sref="admin.all"><i
                                 class="fa fa-th-large"></i>All</a>
 
                         <form class="form-inline pull-right" role="form">
@@ -78,11 +108,18 @@
                         </form>
                     </div>
                     <h3 class="text-center text-muted col-xs-12 col-sm-12 col-md-12 col-lg-12">Groups</h3>
-                    <div data-ng-repeat="group in groups"
+                    <div data-ng-repeat="group in user.groups"
                          class="panel panel-primary col-xs-12 col-sm-12 col-md-2 col-lg-2 group-summary-panel">
-                        <div class="panel-heading">
-                            <h5 class="text-center"><i class="fa fa-group" style="margin-right: 5px;"></i>{{group.name}}
-                            </h5>
+                        <div class="panel-heading group-summary-panel-heading">
+                            <h4>
+                            <i class="fa fa-users"></i>
+                            <a ui-sref="admin.detail({ 'uuid' : group.uuid })" class="bg-primary">{{group.name}}</a>
+                            <a class=" pull-right bg-primary">
+                                    <i class="fa fa-trash-o fa-lg"></i>
+                            </a>
+
+                            </h4>
+
                         </div>
                         <div class="panel-body group-summary-panel-body">
                             <ul>
