Added styling for all groups and group detail page. Changed states and associated routes because the detail view was not being displayed.

--- a/public/pages/admin/index.html
+++ b/public/pages/admin/index.html
@@ -17,6 +17,14 @@
 
     .permissions-panel .panel-body li {
         border-style: none;
+        padding-left: 15px;
+        padding-right: 0px;
+    }
+
+    .permissions-panel .permission-title {
+        margin-left: 10px;
+        margin-right: 10px;
+        text-align: right;
     }
 
 
