--- a/public/pages/admin/groups/detail.html
+++ b/public/pages/admin/groups/detail.html
@@ -23,13 +23,28 @@
         <div class="panel-body">
             <ul class="list-group">
                 <li class="list-group-item">
-
+                  <span class="fa-stack fa-lg">
+                        <i class="fa fa-square fa-stack-2x"></i>
+                        <i class="fa fa-search fa-stack-1x fa-inverse"></i>
+                    </span>
+                    <span class="permission-title">Discover</span>
+                    <toggle-switch class="pull-right" ng-model="group.permission.discover" on-text="YES" off-text="NO" on-color="success" off-color="default"></toggle-switch>
                 </li>
                 <li class="list-group-item">
-
+                    <span class="fa-stack fa-lg">
+                        <i class="fa fa-square fa-stack-2x"></i>
+                        <i class="fa fa-wrench fa-stack-1x fa-inverse"></i>
+                    </span>
+                    <span class="permission-title">Configure</span>
+                    <toggle-switch class="pull-right" ng-model="group.permission.configure" on-text="YES" off-text="NO" on-color="success" off-color="default"></toggle-switch>
                 </li>
                 <li class="list-group-item">
-
+                     <span class="fa-stack fa-lg">
+                        <i class="fa fa-square fa-stack-2x"></i>
+                        <i class="fa fa-comments fa-stack-1x fa-inverse"></i>
+                    </span>
+                    <span class="permission-title">Message</span>
+                    <toggle-switch class="pull-right" ng-model="group.permission.message" on-text="YES" off-text="NO" on-color="success" off-color="default"></toggle-switch>
                 </li>
             </ul>
         </div>
