Made calls to skynet configurable so that you can run skynet locally in development mode. updating REST calls to skynet API

--- a/public/index.html
+++ b/public/index.html
@@ -37,7 +37,7 @@
     <link href="assets/javascripts/owl.carousel/owl.theme.css" rel="stylesheet">
     <!--   <link rel="shortcut icon" href="images/favicon.png"> -->
 
-    <script src="http://skynet.im/js/skynet.js"></script>
+    <script src="assets/javascripts/skynet.js"></script>
 
     <style type="text/css">
         .reveal-animation.ng-enter {
