--- a/public/pages/admin/index.html
+++ b/public/pages/admin/index.html
@@ -123,7 +123,8 @@
                             <h4>
                             <i class="fa fa-users"></i>
                             <a ui-sref="admin.detail({ 'uuid' : group.uuid })" class="bg-primary">{{group.name}}</a>
-                            <a class=" pull-right bg-primary">
+                            <a class=" pull-right bg-primary" tooltip="Delete {{group.name}}" tooltip-placement="top"
+                               tooltip-popup-delay="5" ng-click="deleteGroup(group)">
                                     <i class="fa fa-trash-o fa-lg"></i>
                             </a>
 
