--- a/public/pages/admin/groups/detail.html
+++ b/public/pages/admin/groups/detail.html
@@ -1,9 +1,13 @@
-    <h2 class="text-center col-xs-12 col-sm-12 col-md-10 col-lg-10">Detail</h2>
+    <h2 class="text-center col-xs-12 col-sm-12 col-md-10 col-lg-10">{{ group.name }}</h2>
     <div class="panel purple-border col-xs-12 col-sm-12 col-md-3 col-lg-3 group-info-panel people-panel">
         <div class="panel-heading purple-background">
             <h3 class="title text-center">
                 <i class="fa fa-user fa-lg" style="margin-right: 5px;"></i>People
+                <a  class="pull-right" style="color: #ffffff;">
+                    <i class="fa fa-plus fa-lg"></i>
+                </a>
             </h3>
+
         </div>
         <div class="panel-body group-info-panel-body ">
             <ul class="list-group">
@@ -28,7 +32,9 @@
                         <i class="fa fa-search fa-stack-1x fa-inverse"></i>
                     </span>
                     <span class="permission-title">Discover</span>
-                    <toggle-switch class="pull-right" ng-model="group.permission.discover" on-text="YES" off-text="NO" on-color="success" off-color="default"></toggle-switch>
+                    <div class="pull-right">
+                        <toggle-switch class="pull-right" ng-model="group.permission.discover" on-text="YES" off-text="NO" on-color="success" off-color="default"></toggle-switch>
+                    </div>
                 </li>
                 <li class="list-group-item">
                     <span class="fa-stack fa-lg">
@@ -36,7 +42,9 @@
                         <i class="fa fa-wrench fa-stack-1x fa-inverse"></i>
                     </span>
                     <span class="permission-title">Configure</span>
+                    <div class="pull-right">
                     <toggle-switch class="pull-right" ng-model="group.permission.configure" on-text="YES" off-text="NO" on-color="success" off-color="default"></toggle-switch>
+                        </div>
                 </li>
                 <li class="list-group-item">
                      <span class="fa-stack fa-lg">
@@ -44,7 +52,9 @@
                         <i class="fa fa-comments fa-stack-1x fa-inverse"></i>
                     </span>
                     <span class="permission-title">Message</span>
+                    <div class="pull-right">
                     <toggle-switch class="pull-right" ng-model="group.permission.message" on-text="YES" off-text="NO" on-color="success" off-color="default"></toggle-switch>
+                        </div>
                 </li>
             </ul>
         </div>
@@ -53,6 +63,9 @@
         <div class="panel-heading grass-green-background">
             <h3 class="title text-center">
                 <i class="fa fa-hdd-o fa-lg"></i> Devices
+                <a  class="pull-right" style="color: #ffffff;">
+                    <i class="fa fa-plus fa-lg"></i>
+                </a>
             </h3>
         </div>
         <div class="panel-body group-info-panel-body">
